--- a/tema6_laravel/libreria/resources/css/app.css
+++ b/tema6_laravel/libreria/resources/css/app.css
@@ -76,3 +76,46 @@ th, td {
 th {
     background-color: #f2f2f2;
 }
+
+
+/* formulario */
+
+label {
+    display: block;
+    margin-bottom: 0px;
+    font-weight: bold;
+}
+
+/* Inputs */
+input[type="text"],
+input[type="number"],
+select,
+textarea {
+    width: 100%;
+    padding: 8px;
+    margin-top: 2px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+/* Textarea */
+textarea {
+    resize: vertical;
+    min-height: 80px;
+}
+
+/* Botón */
+button {
+    width: 100%;
+    padding: 10px;
+    background-color: #0d6efd;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 16px;
+    cursor: pointer;
+}
+
+button:hover {
+    background-color: #0b5ed7;
+}
